--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "cheerio": "^1.0.0-rc.10",
     "core-js": "^3.6.5",
     "lodash-es": "^4.17.21",
+    "nanoid": "^3.1.25",
     "vue": "^3.2.11"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/lodash-es": "^4.17.5",
+    "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
