--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "main": "background.js",
   "dependencies": {
+    "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.10",
     "core-js": "^3.6.5",
     "lodash-es": "^4.17.21",
+    "mitt": "^3.0.0",
     "nanoid": "^3.1.25",
     "vue": "^3.2.11"
   },
