--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.10",
     "core-js": "^3.6.5",
+    "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
     "nanoid": "^3.1.25",
-    "vue": "^3.2.19"
+    "vue": "^3.2.19",
+    "vue-i18n": "^9.2.0-beta.7"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
