--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.10",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
